updated setup.sh